--- a/benchmarks/tex/template.tex
+++ b/benchmarks/tex/template.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{amsmath}
 \usepackage[margin=1in]{geometry}
 \begin{document}
 \scriptsize
